# lez-fuzzing

./: .gitignore  Cargo.toml  Justfile  LICENSE-MIT  README.md  colocated_vs_separated.md  current_vs_alternative_approach.md  logos.avif  presentation_qa_team.md  rust-toolchain.toml  targets_coverage.md
.github/actions/checkout-lez/: action.yml
.github/actions/install-r0vm/: action.yml
.github/actions/resolve-targets/: action.yml
.github/actions/setup-afl/: action.yml
.github/actions/setup-libfuzzer/: action.yml
.github/workflows/: corpus-update.yml  fuzz-afl.yml  fuzz.yml  lez-compat.yml  lint.yml  mutants.yml
corpus/libfuzz/fuzz_merkle_tree/: seed_8_elements
corpus/libfuzz/fuzz_state_transition/: seed_empty_tx
corpus/libfuzz/fuzz_stateless_verification/: seed_empty_tx
corpus/libfuzz/fuzz_witness_set_verification/: regression_0004
docs/: fuzzing.md  mutants-not-fuzzable.md
fuzz/: Cargo.toml  build.rs  generate_seeds.sh
fuzz/build_stubs/: sys_alloc_aligned.c
fuzz/corpus/fuzz_state_transition/: seed_empty_tx
fuzz/corpus/fuzz_stateless_verification/: seed_empty_tx
fuzz/corpus/fuzz_transaction_decoding/: seed_empty_tx
fuzz/fuzz_targets/: _template.rs  fuzz_apply_state_diff_split_path.rs  fuzz_block_verification.rs  fuzz_common_invariants.rs  fuzz_encoding_privacy_preserving.rs  fuzz_encoding_roundtrip.rs  fuzz_genesis_invariants.rs  fuzz_merkle_tree.rs  fuzz_multi_block_state_sequence.rs  fuzz_nullifier_set_roundtrip.rs  fuzz_privacy_preserving_state_transition.rs  fuzz_privacy_preserving_witness.rs  fuzz_program_deployment_lifecycle.rs  fuzz_replay_prevention.rs  fuzz_sequencer_vs_replayer.rs  fuzz_signature_verification.rs  fuzz_state_diff_computation.rs  fuzz_state_serialization.rs  fuzz_state_transition.rs  fuzz_stateful_model_lockstep.rs  fuzz_stateless_verification.rs  fuzz_system_account_protection.rs  fuzz_transaction_decoding.rs  fuzz_transaction_ordering_independence.rs  fuzz_transaction_properties.rs  fuzz_validate_execute_consistency.rs  fuzz_witness_set_verification.rs
fuzz_props/: Cargo.toml
fuzz_props/src/: arbitrary_types.rs  generators.rs  genesis.rs  invariants.rs  lib.rs  privacy.rs  tests.rs
fuzz_props/src/tests/: arbitrary_types_test.rs  generators.rs  generators_test.rs  invariants.rs  privacy.rs  replay_proptest.rs  seed_gen.rs
scripts/: add_fuzz_target.py  check_target_inventory.py  mutants-corpus-test.sh
