[package]
name = "fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

# Required by cargo-fuzz — prevents this crate from being a workspace member
[workspace]

[[bin]]
name = "fuzz_transaction_decoding"
path = "fuzz_targets/fuzz_transaction_decoding.rs"
test = false
bench = false

[[bin]]
name = "fuzz_stateless_verification"
path = "fuzz_targets/fuzz_stateless_verification.rs"
test = false
bench = false

[[bin]]
name = "fuzz_state_transition"
path = "fuzz_targets/fuzz_state_transition.rs"
test = false
bench = false

[[bin]]
name = "fuzz_block_verification"
path = "fuzz_targets/fuzz_block_verification.rs"
test = false
bench = false

[features]
default          = ["fuzzer-libfuzzer"]
fuzzer-libfuzzer = ["libfuzzer-sys", "fuzz_props/fuzzer-libfuzzer"]
fuzzer-afl       = ["afl",           "fuzz_props/fuzzer-afl"]

[dependencies]
libfuzzer-sys = { version = "0.4", optional = true }
afl           = { version = "0.15", optional = true }
arbitrary     = { version = "1", features = ["derive"] }
borsh         = "1"
nssa          = { path = "../../logos-execution-zone/lee/state_machine",      package = "lee" }
nssa_core     = { path = "../../logos-execution-zone/lee/state_machine/core", package = "lee_core" }
common        = { path = "../../logos-execution-zone/lez/common" }
fuzz_props    = { path = "../fuzz_props" }
testnet_initial_state = { path = "../../logos-execution-zone/lez/testnet_initial_state" }

[profile.release]
debug = true
opt-level = 3

[[bin]]
name = "fuzz_encoding_roundtrip"
path = "fuzz_targets/fuzz_encoding_roundtrip.rs"
test = false
bench = false

[[bin]]
name = "fuzz_signature_verification"
path = "fuzz_targets/fuzz_signature_verification.rs"
test = false
bench = false

[[bin]]
name = "fuzz_replay_prevention"
path = "fuzz_targets/fuzz_replay_prevention.rs"
test = false
bench = false

[[bin]]
name = "fuzz_state_diff_computation"
path = "fuzz_targets/fuzz_state_diff_computation.rs"
test = false
bench = false

[[bin]]
name = "fuzz_validate_execute_consistency"
path = "fuzz_targets/fuzz_validate_execute_consistency.rs"
test = false
bench = false

[[bin]]
name = "fuzz_state_serialization"
path = "fuzz_targets/fuzz_state_serialization.rs"
test = false
bench = false

[[bin]]
name = "fuzz_witness_set_verification"
path = "fuzz_targets/fuzz_witness_set_verification.rs"
test = false
bench = false

[[bin]]
name = "fuzz_program_deployment_lifecycle"
path = "fuzz_targets/fuzz_program_deployment_lifecycle.rs"
test = false
bench = false

[[bin]]
name = "fuzz_apply_state_diff_split_path"
path = "fuzz_targets/fuzz_apply_state_diff_split_path.rs"
test = false
bench = false

[[bin]]
name = "fuzz_multi_block_state_sequence"
path = "fuzz_targets/fuzz_multi_block_state_sequence.rs"
test = false
bench = false

[[bin]]
name = "fuzz_sequencer_vs_replayer"
path = "fuzz_targets/fuzz_sequencer_vs_replayer.rs"
test = false
bench = false

[[bin]]
name = "fuzz_merkle_tree"
path = "fuzz_targets/fuzz_merkle_tree.rs"
test = false
bench = false

[[bin]]
name = "fuzz_transaction_properties"
path = "fuzz_targets/fuzz_transaction_properties.rs"
test = false
bench = false

[[bin]]
name = "fuzz_privacy_preserving_witness"
path = "fuzz_targets/fuzz_privacy_preserving_witness.rs"
test = false
bench = false

[[bin]]
name = "fuzz_encoding_privacy_preserving"
path = "fuzz_targets/fuzz_encoding_privacy_preserving.rs"
test = false
bench = false

[[bin]]
name = "fuzz_nullifier_set_roundtrip"
path = "fuzz_targets/fuzz_nullifier_set_roundtrip.rs"
test = false
bench = false

[[bin]]
name = "fuzz_privacy_preserving_state_transition"
path = "fuzz_targets/fuzz_privacy_preserving_state_transition.rs"
test = false
bench = false
