[package]
name = "fuzz_props"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
nssa       = { workspace = true }
common     = { workspace = true }
borsh      = { workspace = true }
proptest   = "1.4"
arbitrary  = { version = "1", features = ["derive"] }
testnet_initial_state = { workspace = true }

[dev-dependencies]
proptest = "1.4"
