[package]
name = "fuzz_props"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
fuzzer-libfuzzer = []
fuzzer-afl       = []

[dependencies]
nssa       = { workspace = true, features = ["prove"] }
nssa_core  = { workspace = true }
common     = { workspace = true }
borsh      = { workspace = true }
# Needed by `privacy.rs` to synthesise a *passing* dev-mode fake receipt (Path B):
# a privacy-preserving proof is a borsh-encoded `risc0_zkvm::InnerReceipt`.
risc0-zkvm = { workspace = true }
proptest   = "1.4"
arbitrary  = { version = "1", features = ["derive"] }
testnet_initial_state = { workspace = true }
# Reproduce LEZ genesis (builtin programs + system accounts) in `genesis_state`,
# which LEZ moved out of the state machine into these crates.
programs        = { workspace = true }
system_accounts = { workspace = true }

[dev-dependencies]
proptest = "1.4"
